# aoc22

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: days.rs
day01/: task1.rs  task2.rs  utils.rs
day02/: task1.rs  task2.rs  utils.rs
day03/: task1.rs  task2.rs  utils.rs
src/: main.rs  utils.rs
src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/utils/: bfs.rs  cube.rs  file.rs  vec.rs
src/utils/file/: blueprints.rs  cpu.rs  elevation.rs  expressions.rs  filesystem.rs  groups.rs  matrix.rs  monkeys.rs  movements.rs  position.rs  ranges.rs  sensors.rs  signals.rs  valves.rs  voxels.rs  walls.rs
tests/: integration.rs  regression.rs
