[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"
description = "Advent Of Code 2022 CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
fern = "0.6.1"
log = "0.4.17"
num = "0.4.0"
