[package]
name = "aoc22"
version = "1.0.0"
edition = "2021"
rust-version = "1.95"
description = "Advent Of Code 2022 CLI"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.29", features = ["derive"] }
rustc-hash = "2.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = "thin"

[[bench]]
name = "days"
harness = false
